rewritten everything to be synchronous

--- a/tests/frontend/pytest.ini
+++ b/tests/frontend/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
 ; pythonpath = /Users/pres/AutoFAQ
 ; pythonpath = .
+asyncio_default_fixture_loop_scope = function
 addopts = --alluredir=allure_reports --capture=no
 testpaths = tests
 markers =
