Added intentionally bad frontend test. Moved pytest.ini and conftest.py to the root. Changed txt files accordingly.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
+pythonpath = .
 asyncio_default_fixture_loop_scope = function
-addopts = --alluredir=allure_reports --capture=no
+addopts = --alluredir=allure_results --capture=no
 testpaths = tests
 markers =
     frontend: mark a test as a frontend-related
